Deployment_cicd/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-auth
  namespace: nodeapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: auth-service
  ports:
  - protocol: TCP
    port: 50051
    targetPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-user
  namespace: nodeapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: user-service
  ports:
  - protocol: TCP
    port: 50052
    targetPort: 50052
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-menu
  namespace: nodeapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: menu-service
  ports:
  - protocol: TCP
    port: 50053
    targetPort: 50053

---

apiVersion: v1
kind: Service
metadata:
  name: grpc-order
  namespace: nodeapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: order-service
  ports:
  - protocol: TCP
    port: 50054
    targetPort: 50054

---
apiVersion: v1
kind: Service
metadata:
  name: grpc-deeplink
  namespace: nodeapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: deeplink-service
  ports:
  - protocol: TCP
    port: 50056
    targetPort: 50056
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-kafka
  namespace: nodeapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: kafka-service
  ports:
  - protocol: TCP
    port: 50057
    targetPort: 50057
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-sync
  namespace: nodeapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: sync-service
  ports:
  - protocol: TCP
    port: 50055
    targetPort: 50055
---

apiVersion: v1
kind: Service
metadata:
  name: grpc-location
  namespace: nodeapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: location-service
  ports:
  - protocol: TCP
    port: 50058
    targetPort: 50058

---
apiVersion: v1
kind: Service
metadata:
  name: grpc-notification
  namespace: nodeapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: notification-service
  ports:
  - protocol: TCP
    port: 50059
    targetPort: 50059

---
apiVersion: v1
kind: Service
metadata:
  name: grpc-payment
  namespace: nodeapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: payment-service
  ports:
  - protocol: TCP
    port: 50060
    targetPort: 50060
---

apiVersion: v1
kind: Service
metadata:
  name: grpc-promotion
  namespace: nodeapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: promotion-service
  ports:
  - protocol: TCP
    port: 50061
    targetPort: 50061
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-upload
  namespace: nodeapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: upload-service
  ports:
  - protocol: TCP
    port: 50062
    targetPort: 50062

---
apiVersion: v1
kind: Service
metadata:
  name: grpc-log
  namespace: nodeapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: log-service
  ports:
  - protocol: TCP
    port: 50063
    targetPort: 50063
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-home
  namespace: nodeapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: home-service
  ports:
  - protocol: TCP
    port: 50064
    targetPort: 50064
    
    
---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: nodeapp
  annotations: 
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: auth-service
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
---

apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: nodeapp
  annotations: 
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: user-service
  ports:
  - protocol: TCP
    port: 4001
    targetPort: 4001


---

apiVersion: v1
kind: Service
metadata:
  name: menu-service
  namespace: nodeapp
  annotations: 
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: menu-service
  ports:
  - protocol: TCP
    port: 4002
    targetPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: nodeapp
  annotations: 
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: order-service
  ports:
  - protocol: TCP
    port: 4003
    targetPort: 4003
---

apiVersion: v1
kind: Service
metadata:
  name: deeplink-service
  namespace: nodeapp
  annotations: 
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: deeplink-service
  ports:
  - protocol: TCP
    port: 4005
    targetPort: 4005
---

apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: nodeapp
  annotations: 
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: kafka-service
  ports:
  - protocol: TCP
    port: 4006
    targetPort: 4006
---
apiVersion: v1
kind: Service
metadata:
  name: sync-service
  namespace: nodeapp
  annotations: 
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: sync-service
  ports:
  - protocol: TCP
    port: 4004
    targetPort: 4004

---
apiVersion: v1
kind: Service
metadata:
  name: location-service
  namespace: nodeapp
  annotations: 
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: location-service
  ports:
  - protocol: TCP
    port: 4007
    targetPort: 4007

---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: nodeapp
  annotations: 
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: notification-service
  ports:
  - protocol: TCP
    port: 4008
    targetPort: 4008

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: nodeapp
  annotations: 
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: payment-service
  ports:
  - protocol: TCP
    port: 4009
    targetPort: 4009

---
apiVersion: v1
kind: Service
metadata:
  name: promotion-service
  namespace: nodeapp
  annotations: 
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: promotion-service
  ports:
  - protocol: TCP
    port: 4010
    targetPort: 4010

---

apiVersion: v1
kind: Service
metadata:
  name: upload-service
  namespace: nodeapp
  annotations: 
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: upload-service
  ports:
  - protocol: TCP
    port: 4011
    targetPort: 4011

---
apiVersion: v1
kind: Service
metadata:
  name: log-service
  namespace: nodeapp
  annotations: 
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: log-service
  ports:
  - protocol: TCP
    port: 4012
    targetPort: 4012

---

apiVersion: v1
kind: Service
metadata:
  name: home-service
  namespace: nodeapp
  annotations: 
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: home-service
  ports:
  - protocol: TCP
    port: 4013
    targetPort: 4013
