Deployment_cicd/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    #kubernetes.io/ingress.class: nginx
    #certmanager.k8s.io/cluster-issuer: letsencrypt-staging
spec:
  #tls:
  #- host: americana.appskeeper.com
   # secretName: tls-secret
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: americana.appskeeper.com
    http:
      paths:
      - path: /auth-service/(.*)
        backend:
          serviceName: auth-service
          servicePort: 4000
      - path: /user-service/(.*)
        backend:
          serviceName: user-service
          servicePort: 4001
      - path: /menu-service/(.*)
        backend:
          serviceName: menu-service
          servicePort: 4002
      - path: /order-service/(.*)
        backend:
          serviceName: order-service
          servicePort: 4003
      - path: /deeplink-service/(.*)
        backend:
          serviceName: deeplink-service
          servicePort: 4005
      - path: /kafka-service/(.*)
        backend:
          serviceName: kafka-service
          servicePort: 4006
      - path: /sync-service/(.*)
        backend:
          serviceName: sync-service
          servicePort: 4004
      - path: /location-service/(.*)
        backend:
          serviceName: location-service
          servicePort: 4007
      - path: /notification-service/(.*)
        backend:
          serviceName: notification-service
          servicePort: 4008
      - path: /payment-service/(.*)
        backend:
          serviceName: payment-service
          servicePort: 4009
      - path: /promotion-service/(.*)
        backend:
          serviceName: promotion-service
          servicePort: 4010
      - path: /upload-service/(.*)
        backend:
          serviceName: upload-service
          servicePort: 4011
